manifests/setup-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setup-app-deployment
  labels:
    app: setup-app
  namespace: safeinsights
spec:
  serviceAccountName: setup-app-sa
  volumes:
    - name: setup-app-pv
      persistentVolumeClaim:
        claimName: setup-app-pvc
  replicas: 1
  selector:
    matchLabels:
      app: setup-app
  template:
    metadata:
      labels:
        app: setup-app
    spec:
      containers:
      - name: setup-app
        image: setup-app:verions
        ports:
        - containerPort: 5051
        volumeMounts:
        - mountPath: "/opt/data"
          name: setup-app-pv
