manifests/setup-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: setup-app-svc
  namespace: safeinsights
spec:
  type: ClusterIP
  selector:
    app: setup-app
  ports:
    - protocol: TCP
      port: 5051
      targetPort: 5051
