manifests/trusted-output-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: trusted-output-app-svc
  namespace: safeinsights
spec:
  type: ClusterIP
  selector:
    app: trusted-output-app
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
