manifests/default-deny-all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-network-policy
  namespace: safeinsights
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
