manifests/research-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: research-network-policy
  namespace: safeinsights
spec:
  podSelector:
    matchLabels:
      role: research
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: data
