manifests/setup-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: setup-app-network-policy
  namespace: safeinsights
spec:
  podSelector:
    matchLabels:
      app: setup-app
  policyTypes:
    - Egress
  egress:
    - {}
