manifests/trusted-output-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trusted-output-app-network-policy
  namespace: safeinsights
spec:
  podSelector:
    matchLabels:
      app: trusted-output-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: research
    ports:
    - protocol: TCP
      port: 5050
  egress: {} # needs to allow egress only to webapp endpoint... LB?
